syntax = "proto3";

package pb;

import "post/post.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message UpdatePostRequest {
    string post_id = 1;
    optional string title = 2;
    optional string short_desc = 3;
    optional string description = 4;
}

message UpdatePostResponse {
    Post post = 1;
}


